# CTales

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
data/: story.json
